implementig exception handling
